<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">uSearch</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="main_navigation_map">Map</string>
    <string name="main_navigation_radar">Radar</string>
    <string name="main_navigation_home">Home</string>
    <string name="main_navigation_search">Search</string>
    <string name="main_navigation_setting">Setting</string>
    <string name="device_list">Device list</string>
    <string name="search_device">Search device</string>
    <string name="send_file">Send file</string>
    <string name="device_name">DeviceName</string>
    <string name="is_pair">Is pair</string>
    <string name="mac_address">MAC Address:</string>
    <string name="address_str">address</string>
    <string name="select_file">Select Zone</string>
    <string name="send_file1">Send file：</string>
    <string name="null_name">null</string>
    <string name="ensure">Sure</string>
    <string name="cancel">Cancel</string>
    <string name="back">Back</string>
    <string name="set_visible">Set device visible</string>
    <string name="set_visible_time">set visible time:</string>
    <string name="second">s</string>
    <string name="recovery">rediscovery</string>
    <string name="Welcome_to_use">Welcome to use</string>
	<string name="Help">Help</string>
	<string name="Instruction_book">Instruction book</string>
	<string name="Feedback">Feedback</string>
	<string name="How_to_contact_us">How to contact us</string>
	<string name="Visit">Visit</string>
	<string name="Official_Website">Official Website</string>
	<string name="Input_your_location">Input your location</string>
	<string name="Comfirm">Comfirm</string>
	<string name="Cancel">Cancel</string>
	<string name="indexA">Check out the relistic picture on the A zone</string>
	<string name="indexB">Check out the relistic picture on the B zone</string>
	<string name="indexC">Check out the relistic picture on the C zone</string>
	<string name="indexD">Check out the relistic picture on the D zone</string>
	<string name="indexE">Check out the relistic picture on the E zone</string>
	<string name="indexF">Check out the relistic picture on the F zone</string>
	<string name="indexCV">Check out the relistic picture on the culture village</string>
	<string name="indexLib">Check out the relistic picture on the Library</string>
	
</resources>