<?xml version="1.0" encoding="utf-8"?>
<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@android:id/tabhost"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >
      <FrameLayout
            android:id="@android:id/tabcontent"
            android:layout_width="fill_parent"
            android:layout_height="0.0dip"
            android:layout_weight="1.0" />
        <TabWidget
            android:id="@android:id/tabs"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.0"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/console_line_bottom"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_gravity="bottom"
            android:orientation="horizontal" >

            <RadioGroup
                android:id="@+id/main_tab_group"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="@drawable/bottom_bg"
                android:gravity="bottom"
                android:orientation="horizontal"
                android:paddingTop="1.0dip" >

                <RadioButton
                    android:id="@+id/main_tab_map"
                    style="@style/main_tab_bottom"
                    android:drawableTop="@drawable/bottom_map"
                    android:text="@string/main_navigation_map" />

                <RadioButton
                    android:id="@+id/main_tab_radar"
                    style="@style/main_tab_bottom"
                    android:drawableTop="@drawable/bottom_radar"
                    android:text="@string/main_navigation_radar" />

                <RadioButton
                    android:id="@+id/main_tab_home"
                    style="@style/main_tab_bottom"
                  	android:checked="true"
                    android:gravity="center_vertical"
                    android:drawablePadding="-10dp"
                    android:drawableTop="@drawable/bottom_home" />

                <RadioButton
                    android:id="@+id/main_tab_search"
                    style="@style/main_tab_bottom"
                    android:drawableTop="@drawable/bottom_search"
                    android:text="@string/main_navigation_search" />

                <RadioButton
                    android:id="@+id/main_tab_setting"
                    style="@style/main_tab_bottom"
                    android:drawableTop="@drawable/bottom_setting"
                    android:text="@string/main_navigation_setting" />
            </RadioGroup>
        </LinearLayout>
    </LinearLayout>

</TabHost>