<?xml version="1.0" encoding="UTF-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/exit_layout"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:descendantFocusability="beforeDescendants"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:background="@drawable/confirm_dialog_bg2" >

        <TextView
            android:id="@+id/titleinfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:padding="5dp"
            android:text="@string/Input_your_location"
            android:textColor="#333"
            android:textSize="20sp" />
        
        <EditText
            android:id="@+id/settinginfo"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textColor="#333"
            android:layout_marginTop="18dp"
            android:padding="10dp"
            android:textSize="14sp"
            android:background="@drawable/login_editbox"
            android:gravity="center_horizontal"
            android:text=""/> 
        

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"           
            android:layout_marginTop="35dp"
            android:layout_marginBottom="8dp"
             >
            
            <Button
              android:id="@+id/saveButton"
              android:layout_width="110dp"
              android:layout_height="wrap_content"
              android:text="@string/Comfirm"
              android:textSize="16sp"
              android:textColor="#fff"
              android:background="@drawable/btn_style_green"
              android:gravity="center"
			  android:onClick="lookup_distance"
              />
            <Button
              android:id="@+id/exitBtn1"
              android:layout_width="110dp"
              android:layout_height="wrap_content"
              android:layout_marginLeft="10dp"
              android:text="@string/Cancel"
              android:textSize="16sp"
              android:textColor="#333"
              android:background="@drawable/btn_style_white"
              android:gravity="center"
			  android:onClick="cancel_lookup"
              />
        </LinearLayout>

    </LinearLayout>
